--- a/10-Template/Client.mediawiki
+++ b/10-Template/Client.mediawiki
@@ -1,6 +1,6 @@
 __NOTOC__ <!-- Pages long enough to need a TOC should be split into subpages -->
-<div style="border-right: 1em solid white; float: right; clear: left; margin-right: 1em;">
-<div class="infobox" style="width: 20em; text-align: left; font-size: 90%; float: none; margin: 0px; border: 1px solid #AAAAAA; background-color: #F9F9F9; margin-bottom: 10px; margin-left: 2em;">
+<div style="border-left: 1em solid white; float: right; clear: left; margin-left: 1em;">
+<div class="infobox" style="width: 20em; text-align: left; font-size: 90%; float: none; margin: 0px; border: 1px solid #AAAAAA; background-color: #F9F9F9; margin-bottom: 10px;">
 <div style="text-align:center; font-size: 120%;">'''{{{name|{{PAGENAME}}}}}'''</div>
 <div id="level-infobox-image" style="text-align:center;">[[Image:{{{image|{{PAGENAME}}.png}}}]]<br />{{#ifexist: Image:{{{image|{{PAGENAME}}.png}}}||''There is no image of this client - please <span class="plainlinks">[{{fullurl:Special:Upload|wpDestFile={{{image|{{PAGENAMEE}}.png}}}}} upload one]</span>!''}}</div>
 <table style="width: 100%;">
@@ -25,6 +25,7 @@ __NOTOC__ <!-- Pages long enough to need a TOC should be split into subpages -->
 </div></div><noinclude> <!-- don't put any newlines here (around the divs) otherwise it puts paragraph markers after the infobox on inclusion pages -->
 <em>This template is used to display an information box containing details about an XMMS2 client.  See [[Client:Remuco]] for example use.</em>
 
+== Usage ==
 Please note that the image should ideally be a screenshot of the client, or in the case of large clients, a cropped screenshot of a key part of the UI.  People will use this image to help decide whether to download the client or not, so make sure it's informative!
 
 Any omitted parameters will show sensible defaults (usually "Unknown") so for this reason leave out parameters you are unsure of.  Valid parameters and examples are:
