Don't display {{{description}}} when no description parameter is present
Levitation import of page 1170 rev 8716.

--- a/10-Template/Client.mediawiki
+++ b/10-Template/Client.mediawiki
@@ -52,7 +52,7 @@ Any omitted parameters will show sensible defaults (usually "Unknown") so for th
 |}
 </noinclude>
 <includeonly>
-{{{description}}}
+{{{description|}}}
 
 [[Category:Clients]]
 {{#if:{{{devlanguage|}}}|[[Category:Clients written in {{{devlanguage}}}]]
