/* author(s) */ Reply re #pos
Levitation import of page 2503 rev 8740.

--- a/11-Template talk/Client.mediawiki
+++ b/11-Template talk/Client.mediawiki
@@ -13,3 +13,4 @@ This template falls back to PAGENAME if the image parameter is not given. Howeve
 
 ===== author(s) =====
 Is author2,author3,author4 really needed? Couldn't we just keep comma separation? For the author->authors handling we could use <nowiki>{{#pos:{{author}}|,}}</nowiki> to figure out if there are multiple authors? That way we don't have to add author5, author6, and so on..  [[User:Anders Waldenborg|Anders Waldenborg]] 20:36, 22 August 2009 (UTC)
+:Having numbered tags like that seems to be a common way of doing this (some of the Wikipedia templates go up to field99), so I kept it like that for future use - if we ever want to use categories to provide a list of clients by a particular author for example, or otherwise manipulate the list of authors it's much easier if they're already split out as individuals rather than a single string.  I've never used #pos before but I guess it could work, so by all means adjust it how you see fit if it will work better this way. -- [[User:Malvineous|Malvineous]] 11:29, 26 August 2009 (UTC)
