--- a/0-/XMMS2Con2010.mediawiki
+++ b/0-/XMMS2Con2010.mediawiki
@@ -42,7 +42,17 @@ Some of the developers live around/in MalmÃ¶ and might be able to offer some b
 
 The I am of course interested table is below:
 
-{| class="wikitable"
-! Name || Dates that work || Need place to stay || Have X number of beds to lend || Comments
-! Tobias RundstrÃ¶m| All | No | 0 | Hooray!
+{| class="wikitable" style="text-align: center; width:80%; margin: 1em auto 1em auto;"
+|+
+! Name
+! Dates that work
+! Need place to stay
+! Have X number of beds to lend
+! Comments
+|-
+| Tobias RundstrÃ¶m 
+| All 
+| No 
+| 0 
+| Hooray!
 |}
