--- a/0-/XMMS2Con2010.mediawiki
+++ b/0-/XMMS2Con2010.mediawiki
@@ -61,4 +61,10 @@ The I am of course interested table is below:
 | No
 | 1
 | When X2Con is end, power of code merge!
+|-
+| Tilman Sauerbeck
+| All
+| Yes
+| 0
+| \o/
 |}
