--- a/0-/XMMS2Con2010.mediawiki
+++ b/0-/XMMS2Con2010.mediawiki
@@ -59,7 +59,7 @@ The I am of course interested table is below:
 | Daniel Svensson
 | All (march is preferred)
 | No
-| 1
+| 1 (and ~2 floor spots)
 | When X2Con is end, power of code merge!
 |-
 | Tilman Sauerbeck
