Levitation import of page 2511 rev 8756.

--- a/0-/XMMS2Con2010.mediawiki
+++ b/0-/XMMS2Con2010.mediawiki
@@ -67,4 +67,10 @@ The I am of course interested table is below:
 | Yes
 | 0
 | \o/
+|-
+| Florian Ragwitz
+| All (January preferred)
+| No
+| 0
+| Staying at Hotel Svensson
 |}
