Levitation import of page 2511 rev 8757.

--- a/0-/XMMS2Con2010.mediawiki
+++ b/0-/XMMS2Con2010.mediawiki
@@ -73,4 +73,10 @@ The I am of course interested table is below:
 | No
 | 0
 | Staying at Hotel Svensson
+|-
+| Anders Waldenborg
+| Any
+| No
+| 0
+| 
 |}
