--- a/0-/XMMS2Con2010.mediawiki
+++ b/0-/XMMS2Con2010.mediawiki
@@ -80,5 +80,11 @@ The I am of course interested table is below:
 | Any
 | No
 | 0
+|-
+| Alex Botero-Lowry
+| All (Feb 12-14 preferred) 
+| Yes
+| 0
+| \o/ Date selected, so I can go to FOSDEM too. :)
 | 
 |}
