Added Sébastien Cevey
Levitation import of page 2511 rev 8765.

--- a/0-/XMMS2Con2010.mediawiki
+++ b/0-/XMMS2Con2010.mediawiki
@@ -93,4 +93,10 @@ The I am of course interested table is below:
 | Yes
 | 0
 | 
+|-
+| SÃ©bastien Cevey
+| All (less keen on Jan 15-17)
+| No*
+| 0
+| *Can probably stay at a friend's, to be confirmed.
 |}
