--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -17,6 +17,7 @@ All current clients should be found here.
 {{ClientTableEntry|Dabra| Graphical / libnotify | C | in development | Provides desktop notifications }}
 {{ClientTableEntry|EkoXMMS2| X-Chat Plugin | C | in development | Small player integrated into X-Chat }}
 {{ClientTableEntry|Eloquence| Plugin for E17 | C | in development | themeable desktop module }}
+{{ClientTableEntry|Etude| Graphical / GTK | Python | in development | Client with graphical collection editor }}
 {{ClientTableEntry|Euphoria| Graphical / EFL | Ruby | rewrite | Slick themeable client }}
 {{ClientTableEntry|eq| Graphical / GTK | Python | in development | Simple equalizer frontend }}
 {{ClientTableEntry|exmms2| Graphical/ EWL/EFL | C | in development | usable, but edit makefile, basic functionality }}
