Levitation import of page 2514 rev 8771.

--- a/0-/Component:normalize.mediawiki
+++ b/0-/Component:normalize.mediawiki
@@ -13,3 +13,5 @@ The normalizer plugin introduces the following configuration variables into XMMS
 * normalize.use_anticlip
 
 Description of each configuration variable:
+
+TBA
