Levitation import of page 2514 rev 8772.

--- a/0-/Component:normalize.mediawiki
+++ b/0-/Component:normalize.mediawiki
@@ -15,3 +15,7 @@ The normalizer plugin introduces the following configuration variables into XMMS
 Description of each configuration variable:
 
 TBA
+
+[[Category:Effect Plugins]]
+[[Category:Components]]
+[[Category:XMMS2 Technical Details]]
