Levitation import of page 2511 rev 8773.

--- a/0-/XMMS2Con2010.mediawiki
+++ b/0-/XMMS2Con2010.mediawiki
@@ -95,7 +95,7 @@ The I am of course interested table is below:
 | 
 |-
 | SÃ©bastien Cevey
-| All (less keen on Jan 15-17)
+| All (not sure I can make Jan 15-17)
 | No*
 | 0
 | *Can probably stay at a friend's, to be confirmed.
