/* What is Remuco? */
Levitation import of page 2292 rev 8775.

--- a/0-/Client:Remuco.mediawiki
+++ b/0-/Client:Remuco.mediawiki
@@ -13,7 +13,7 @@ Client
 ==== What is Remuco? ====
 Remuco is a duplex remote control system for Linux media players and '''mobile devices''' equipped with '''Bluetooth''' or '''WiFi'''. With Remuco, you can remotely control your favorite media player. You can switch to the next, previous, or any other media within the current playlist, browse your media library and activate other playlists, rate your media, adjust volume, and more. On the mobile device (the remote control), it displays information about the current media, including cover art.
 
-Currently Remuco can be used with Amarok, Audacious, Banshee, Exaile, MPD, Rhythmbox, Totem, TVtime, VLC and '''XMMS2'''.
+Currently Remuco can be used with various media players, including '''XMMS2'''.
 
 ==== So it's just another remote control? ====
 Of course not :) Support for XMMS2 is quite sophisticated. You can browse your collections and playlists, do search queries on your library or browse tracks in an artist/album fashion. While browsing you can update the active playlist by appending or replacing tracks or you can activate stored playlists.
