Levitation import of page 2511 rev 8783.

--- a/0-/XMMS2Con2010.mediawiki
+++ b/0-/XMMS2Con2010.mediawiki
@@ -4,12 +4,7 @@ It's time to hold the first XMMS2con in history! Yay. This page collects some id
 == Where and when ==
 Where will be in MalmÃ¶ Sweden. Purple Scout have allowed us to use their offices to host the conference. We have big screen projector, nice beer fridges, lots of sofas and several different types of Rock Band, so it will fit us perfectly!
 
-Date is not 100% set in stone, so we would like some input for that. Here are my suggestions (all in 2010):
-
-* January 15-17
-* February 12-14
-* February 19-21
-* March 12-14
+'''The date will be February 19-21'''
 
 Please indicate below which date you prefer. Date will be set by mid october so that everyone have good advance notice to make arrangements etc.
 
