--- a/0-/Client:Flexmms2.mediawiki
+++ b/0-/Client:Flexmms2.mediawiki
@@ -1,7 +1,7 @@
 {{Client|
 name=Flexmms2|
 author=Max Hollmann|
-version=0.1|
+version=[http://nic-nac-project.org/~zank/xmms2/flexmms2/flexmms2_v0.1.0.tar.gz 0.1.0]|
 website=http://nic-nac-project.org/~zank/xmms2/flexmms2/|
 devlanguage=Python|
 ui=GTK2|
